<resources>
    <string name="app_name">a08_activitylifecycle</string>
    <string name="hint_password">Введите пароль</string>
    <string name="hint_email">Введите Email</string>
    <string name="button_text">Войти</string>
    <string name="chbox_text">Я принимаю соглашение</string>
    <string name="agrement_text">Текст соглашеня:\n
        бла бла бла бла бла бла бла бла бла бла
        бла бла бла бла бла бла бла бла бла бла
        бла бла бла бла бла бла бла бла бла бла
        бла бла бла бла бла бла бла бла бла бла
        бла бла бла бла бла бла бла бла бла бла
        бла бла бла бла бла бла бла бла бла бла
        бла бла бла бла бла бла бла бла бла бла
        бла бла бла бла бла бла бла бла бла бла
        бла бла бла бла бла бла бла бла бла бла
        бла бла бла бла бла бла бла бла бла бла
        бла бла бла бла бла бла бла бла бла бла
        бла бла бла бла бла бла бла бла бла бла
        бла бла бла бла бла бла бла бла бла бла
        бла бла бла бла бла бла бла бла бла бла
        бла бла бла бла бла бла бла бла бла бла
        бла бла бла бла бла бла бла бла бла бла
        бла бла бла бла бла бла бла бла бла бла
        бла бла бла бла бла бла бла бла бла бла
        бла бла бла бла бла бла бла бла бла бла
        бла бла бла бла бла бла бла бла бла бла
        бла бла бла бла бла бла бла бла бла бла
        бла бла бла бла бла бла бла бла бла бла
        бла бла бла бла бла бла бла бла бла бла
        бла бла бла бла бла бла бла бла бла бла
        бла бла бла бла бла бла бла бла бла бла
        бла бла бла бла бла бла бла бла бла бла
        бла бла бла бла бла бла бла бла бла бла
        бла бла бла бла бла бла бла бла бла бла
        бла бла бла бла бла бла бла бла бла бла
        бла бла бла бла бла бла бла бла бла бла
        бла бла бла бла бла бла бла бла бла бла
        бла бла бла бла бла бла бла бла бла бла
        бла бла бла бла бла бла бла бла бла бла
        бла бла бла бла бла бла бла бла бла бла
        бла бла бла бла бла бла бла бла бла бла
        бла бла бла бла бла бла бла бла бла бла
        бла бла бла бла бла.</string>

</resources>
